objects/Certification__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Is_Current_User__c</fullName>
        <description>Indicates that the certification is assigned to the community user that is currently logged in. Used to populate a list view.</description>
        <formula>Contact__r.Id  =  $User.ContactId</formula>
        <inlineHelpText>Indicates that the certification is assigned to the community user that is currently logged in. Used to populate a list view.</inlineHelpText>
        <label>Is Current User</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Used for Channel Partners to indicate which certifications they have achieved.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Certification</label><nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Certifications</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>AllMyAssigned_Community</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Registered,In Progress,Completed</value>
        </filters>
        <label>All My Certifications</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>MyAssigned_Community</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Registered,In Progress</value>
        </filters>
        <label>My Assigned Certifications</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_Certifications</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>My Certifications</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews></CustomObject>